--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- End Meta Pixel Code -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gestãonegocio - Mais Gestão e Lucratividade</title>
+  <title>Mercado PRO - Mais Gestão e Lucratividade</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
