feat: adiciona favicon com logotipo Mercado PRO

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     fbq('track', 'PageView');
   </script>
   <!-- End Meta Pixel Code -->
+  <link rel="icon" type="image/jpeg" href="/mercadoprologo.jpg" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mercado PRO - Mais Gestão e Lucratividade</title>
